fix typo in notebook title

--- a/notebooks/passive_liquidity.ipynb
+++ b/notebooks/passive_liquidity.ipynb
@@ -5,7 +5,7 @@
    "id": "11462f56-f9b0-4329-bb20-f233d1eb961f",
    "metadata": {},
    "source": [
-    "# CFMM liquidity on an orde book\n",
+    "# Passive liquidity on an order book\n",
     "\n",
     "- $f(x, y)$ - the CFMM's invariant function\n",
     "- $A$ - current pool reserve of the base asset\n",
@@ -626,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
