--- a/notebooks/market_order.ipynb
+++ b/notebooks/market_order.ipynb
@@ -18,27 +18,60 @@
     "\n",
     "Note that in the onchain smart contract, $A_i$ and $B_j$ are integers, denoted in the minimum indivisible units of BTC and USD, respectively. However, here for simplicity, we use floating point numbers for all variables.\n",
     "\n",
-    "The algorithm is a function that takes the inputs:\n",
+    "The algorithm is a function that has the following inputs and outputs:\n",
     "\n",
-    "- $\\{ (p_i, A_i) \\mid i = 1, 2, \\dots, N \\}$\n",
-    "- $\\{ (B_j, s_j) \\mid j = 1, 2, \\dots, M \\}$\n",
+    "- Inputs:\n",
+    "  - $\\{ (p_i, A_i) \\mid i = 1, 2, \\dots, N \\}$\n",
+    "  - $\\{ (B_j, s_j) \\mid j = 1, 2, \\dots, M \\}$\n",
+    "- Outputs:\n",
+    "  - $\\mathtt{limitOrderBtcSold}_{\\{1, 2, \\dots, N\\}}$ (for each limit order, the amount of BTC sold)\n",
+    "  - $\\mathtt{limitOrderUsdBought}_{\\{1, 2, \\dots, N\\}}$ (for each limit order, the amount of USD bought)\n",
+    "  - $\\mathtt{marketOrderUsdSold}_{\\{1, 2, \\dots, M\\}}$ (for each market order, the amount of USD sold)\n",
+    "  - $\\mathtt{marketOrderBtcBought}_{\\{1, 2, \\dots, M\\}}$ (for each market order, the amount of BTC bought)\n",
     "\n",
-    "and outputs:\n",
+    "The algorithm is as follows:\n",
     "\n",
-    "- For each market order,\n",
-    "  - the amount of USD sold;\n",
-    "  - the amount of BTC bought.\n",
-    "- For each limit order consumed,\n",
-    "  - the amount of BTC sold;\n",
-    "  - the amount of USD bought.\n",
-    "\n",
-    "The algorithm is as follows:"
+    "- $\\mathtt{limitOrderBtcSold}_{\\{1, 2, \\dots, N\\}} \\gets [0, 0, \\dots, 0]$\n",
+    "- $\\mathtt{limitOrderUsdBought}_{\\{1, 2, \\dots, N\\}} \\gets [0, 0, \\dots, 0]$\n",
+    "- $\\mathtt{marketOrderUsdSold}_{\\{1, 2, \\dots, M\\}} \\gets [0, 0, \\dots, 0]$\n",
+    "- $\\mathtt{marketOrderBtcBought}_{\\{1, 2, \\dots, M\\}} \\gets [0, 0, \\dots, 0]$\n",
+    "- $i \\gets 1$ (index tracking the current limit order)\n",
+    "- $j \\gets 1$ (index tracking the current market order)\n",
+    "- $A_{\\mathrm{remain}} \\gets A_i$ (track the remaining BTC amount in the current limit order)\n",
+    "- $B_{\\mathrm{remain}} \\gets B_j$ (track the remaining BTC amount in the current market order)\n",
+    "- $p_{\\mathrm{max}} \\gets (1 + s_j) p_i$ (the maximum average execution price the current market order)\n",
+    "- Loop:\n",
+    "  - First, compute how many BTC is available to buy. This is determined by the remaining amount in either the limit or the market order, whichever is smaller:\n",
+    "  - $A_{\\mathrm{available}} \\gets \\mathrm{min} \\left( A_{\\mathrm{remain}}, \\left\\lfloor \\frac{B_{\\mathrm{remain}}}{p_i} \\right\\rfloor \\right)$\n",
+    "  - If $p_i \\leq p_{\\mathrm{max}}$:\n",
+    "    - In this case, we buy as much BTC as possible.\n",
+    "    - $A_{\\mathrm{buy}} \\gets A_{\\mathrm{available}}$\n",
+    "  - Else (that is, $p_i > p_{\\mathrm{max}}$)\n",
+    "    - In this case, we buy up to the point where the average execution price reaches $p_{\\mathrm{max}}$.\n",
+    "    - $A_{\\mathrm{buy}} \\gets \\mathrm{min} \\left( A_{\\mathrm{available}}, \\left\\lfloor \\frac{p_{\\mathrm{max}} \\mathtt{marketOrderBtcBought}_j - \\mathtt{marketOrderUsdSold}_j}{p_i - p_{\\mathrm{max}}} \\right\\rfloor \\right)$\n",
+    "  - $\\mathtt{limitOrderBtcSold}_i \\mathrel{{+}{=}} A_{\\mathrm{buy}}$\n",
+    "  - $\\mathtt{limitOrderUsdBought}_i \\mathrel{{+}{=}} p_i A_{\\mathrm{buy}}$\n",
+    "  - $\\mathtt{marketOrderUsdSold}_j \\mathrel{{+}{=}} p_i A_{\\mathrm{buy}}$\n",
+    "  - $\\mathtt{marketOrderBtcBought}_j \\mathrel{{+}{=}} A_{\\mathrm{buy}}$\n",
+    "  - $A_{\\mathrm{remain}} \\mathrel{{-}{=}} A_{\\mathrm{buy}}$\n",
+    "  - $B_{\\mathrm{remain}} \\mathrel{{-}{=}} p_i A_{\\mathrm{buy}}$\n",
+    "  - If either a) $B_{\\mathrm{remain}} = 0$, or b) $B_{\\mathrm{remain}} \\neq 0$ and $A_{\\mathrm{remain}} \\neq 0$\n",
+    "    - (a) means this market order is completely consumed; (b) means we can't execute this market any more without exceeding $p_{\\mathrm{max}}$ (the price limit).\n",
+    "    - Either way, move on to the next market order.\n",
+    "    - $j \\gets j + 1$\n",
+    "    - $B_{\\mathrm{remain}} \\gets B_j$\n",
+    "    - $p_{\\mathrm{max}} \\gets (1 + s_j) p_i$\n",
+    "  - If $A_{\\mathrm{remain}} = 0$:\n",
+    "    - This limit order is completely consumed. Move on to the next limit order.\n",
+    "    - $i \\gets i + 1$\n",
+    "    - $A_{\\mathrm{remain}} \\gets A_i$\n",
+    "- Return $\\mathtt{limitOrderBtcSold}_{\\{1, 2, \\dots, N\\}}$, $\\mathtt{limitOrderUsdBought}_{\\{1, 2, \\dots, N\\}}$, $\\mathtt{marketOrderUsdSold}_{\\{1, 2, \\dots, M\\}}$, $\\mathtt{marketOrderBtcBought}_{\\{1, 2, \\dots, M\\}}$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54122b1c-638c-4831-b554-3edb9883376e",
+   "id": "0a8c45d9-d5a0-4154-8d3a-fdc66e97f8f4",
    "metadata": {},
    "outputs": [],
    "source": []
