--- a/notebooks/market_order.ipynb
+++ b/notebooks/market_order.ipynb
@@ -9,14 +9,14 @@
     "\n",
     "For this example, let's consider in the BTC-USD pair, executing a series BUY market order against the SELL side of the resting orderbook.\n",
     "\n",
-    "- $(p_i, A_i)$: a SELL limit order, where $p_i$ is the price (as the units of USD that's equal in value as 1 unit of BTC); $A_i$ is the order's size (as units of BTC).\n",
+    "- $(p_i, A_i)$: a SELL limit order, where $p_i$ is the limit price (as the units of USD that's equal in value as 1 unit of BTC); $A_i$ is the order's size (as units of BTC).\n",
     "- $\\{ (p_i, A_i) \\mid i = 1, 2, \\dots, N \\}$: the SELL side of the resting orderbook, sorted by price-time priority. Specifically, $p_1 \\leq p_2 \\leq p_3 \\leq \\dots \\leq p_N$.\n",
     "- $(B_j, s_j)$: a BUY market order, where $B_j$ is the budget (as units of USD); $s_j$ is the maximum slippage (defined below).\n",
     "- $\\{ (B_j, s_j) \\mid j = 1, 2, \\dots, M \\}$: the series of BUY market orders, sorted by priority.\n",
     "\n",
-    "Maximum slippage works as follows: suppose the best ask price at the time of executing market order $(B_j, s_j)$ is $p_{\\mathrm{best}}$, the market order's _average execution price_ must not be worse than $p_{\\mathrm{max}} = (1 + s_j) p_{\\mathrm{best}}$. Note it's possible that the market order is executed against a limit order whose limit price $p_i > p_{\\mathrm{max}}$, as long as the _average_ price over all limit order consumed is no greater than $p_{\\mathrm{max}}$.\n",
+    "Maximum slippage works as follows: suppose the best ask price at the time of executing market order $(B_j, s_j)$ is $p_{\\mathrm{best}}$, then this market order's _average execution price_ must not be worse than $p_{\\mathrm{max}} = (1 + s_j) p_{\\mathrm{best}}$. Note it's possible that the market order is executed against a limit order whose limit price $p_i > p_{\\mathrm{max}}$, as long as the _average_ price over all limit order consumed is no greater than $p_{\\mathrm{max}}$.\n",
     "\n",
-    "Note that in the onchain smart contract, $A_i$ and $B_j$ are integers, denoted in the minimum indivisible units of BTC and USD, respectively. However, here for simplicity, we use floating point numbers for all variables.\n",
+    "Note that $A_i$ and $B_j$ are integers, denoted in the minimum indivisible units of BTC and USD, respectively. (Here in the Python prototype, however, for simplicity, we use floating point numbers.)\n",
     "\n",
     "The algorithm is a function that has the following inputs and outputs:\n",
     "\n",
@@ -38,8 +38,8 @@
     "- $i \\gets 1$ (index tracking the current limit order)\n",
     "- $j \\gets 1$ (index tracking the current market order)\n",
     "- $A_{\\mathrm{remain}} \\gets A_i$ (track the remaining BTC amount in the current limit order)\n",
-    "- $B_{\\mathrm{remain}} \\gets B_j$ (track the remaining BTC amount in the current market order)\n",
-    "- $p_{\\mathrm{max}} \\gets (1 + s_j) p_i$ (the maximum average execution price the current market order)\n",
+    "- $B_{\\mathrm{remain}} \\gets B_j$ (track the remaining USD amount in the current market order)\n",
+    "- $p_{\\mathrm{max}} \\gets (1 + s_j) p_i$ (the maximum average execution price for the current market order)\n",
     "- Loop:\n",
     "  - First, compute how many BTC is available to buy. This is determined by the remaining amount in either the limit or the market order, whichever is smaller:\n",
     "  - $A_{\\mathrm{available}} \\gets \\mathrm{min} \\left( A_{\\mathrm{remain}}, \\left\\lfloor \\frac{B_{\\mathrm{remain}}}{p_i} \\right\\rfloor \\right)$\n",
@@ -58,11 +58,20 @@
     "  - If either a) $B_{\\mathrm{remain}} = 0$, or b) $B_{\\mathrm{remain}} \\neq 0$ and $A_{\\mathrm{remain}} \\neq 0$\n",
     "    - (a) means this market order is completely consumed; (b) means we can't execute this market any more without exceeding $p_{\\mathrm{max}}$ (the price limit).\n",
     "    - Either way, move on to the next market order.\n",
+    "    - If $j = M$:\n",
+    "      - **Break**\n",
     "    - $j \\gets j + 1$\n",
     "    - $B_{\\mathrm{remain}} \\gets B_j$\n",
-    "    - $p_{\\mathrm{max}} \\gets (1 + s_j) p_i$\n",
+    "    - If $A_{\\mathrm{remain}} \\neq 0$:\n",
+    "      - $p_{\\mathrm{max}} \\gets (1 + s_j) p_i$\n",
+    "    - Else if $i < N$:\n",
+    "      - $p_{\\mathrm{max}} \\gets (1 + s_j) p_{i+1}$\n",
+    "    - Else:\n",
+    "      - **Break**\n",
     "  - If $A_{\\mathrm{remain}} = 0$:\n",
     "    - This limit order is completely consumed. Move on to the next limit order.\n",
+    "    - if $i = N$:\n",
+    "      - **Break**\n",
     "    - $i \\gets i + 1$\n",
     "    - $A_{\\mathrm{remain}} \\gets A_i$\n",
     "- Return $\\mathtt{limitOrderBtcSold}_{\\{1, 2, \\dots, N\\}}$, $\\mathtt{limitOrderUsdBought}_{\\{1, 2, \\dots, N\\}}$, $\\mathtt{marketOrderUsdSold}_{\\{1, 2, \\dots, M\\}}$, $\\mathtt{marketOrderBtcBought}_{\\{1, 2, \\dots, M\\}}$"
