--- a/notebooks/market_order.ipynb
+++ b/notebooks/market_order.ipynb
@@ -56,8 +56,7 @@
     "  - $A_{\\mathrm{remain}} \\mathrel{{-}{=}} A_{\\mathrm{buy}}$\n",
     "  - $B_{\\mathrm{remain}} \\mathrel{{-}{=}} p_i A_{\\mathrm{buy}}$\n",
     "  - If either a) $B_{\\mathrm{remain}} = 0$, or b) $B_{\\mathrm{remain}} \\neq 0$ and $A_{\\mathrm{remain}} \\neq 0$\n",
-    "    - (a) means this market order is completely consumed; (b) means we can't execute this market any more without exceeding $p_{\\mathrm{max}}$ (the price limit).\n",
-    "    - Either way, move on to the next market order.\n",
+    "    - (a) means this market order is completely consumed; (b) means we can't execute this market any more without exceeding $p_{\\mathrm{max}}$ (the price limit). Either way, move on to the next market order.\n",
     "    - If $j = M$:\n",
     "      - **Break**\n",
     "    - $j \\gets j + 1$\n",
