add a few test cases

--- a/notebooks/market_order.ipynb
+++ b/notebooks/market_order.ipynb
@@ -78,8 +78,249 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "571de584-5acb-47d9-91d1-d11a82c53778",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pprint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1ba25cf4-d3c4-4b6b-9ca9-e69b30bf8435",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def execute_market_orders(limit_orders, market_orders):\n",
+    "    outcome = {\n",
+    "        'limit': [{'btc_sold': 0, 'usd_bought': 0} for i in range(len(limit_orders))],\n",
+    "        'market': [{'usd_sold': 0, 'btc_bought': 0} for j in range(len(market_orders))],\n",
+    "    }\n",
+    "\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "\n",
+    "    A_remain = limit_orders[i]['btc_amount']\n",
+    "    B_remain = market_orders[j]['usd_amount']\n",
+    "\n",
+    "    p_i = limit_orders[i]['price']\n",
+    "    p_max = (1 + market_orders[j]['maximum_slippage']) * p_i\n",
+    "\n",
+    "    while True:\n",
+    "        A_buy = min(A_remain, B_remain / limit_orders[i]['price'])\n",
+    "        \n",
+    "        if p_i > p_max:\n",
+    "            A_buy = min(A_buy, (p_max * outcome['market'][j]['btc_bought'] - outcome['market'][j]['usd_sold']) / (p_i - p_max))\n",
+    "\n",
+    "        B_sell = A_buy * limit_orders[i]['price']\n",
+    "\n",
+    "        outcome['limit'][i]['btc_sold'] += A_buy\n",
+    "        outcome['limit'][i]['usd_bought'] += B_sell\n",
+    "        outcome['market'][j]['usd_sold'] += B_sell\n",
+    "        outcome['market'][j]['btc_bought'] += A_buy\n",
+    "\n",
+    "        A_remain -= A_buy\n",
+    "        B_remain -= B_sell\n",
+    "\n",
+    "        print(f'i={i}, j={j}, p_max={p_max}, p_i={p_i}, A_buy={A_buy}, B_sell={B_sell}, A_remain={A_remain}, B_remain={B_remain}')\n",
+    "\n",
+    "        if B_remain == 0 or A_remain != 0:\n",
+    "            j += 1\n",
+    "            if j == len(market_orders):\n",
+    "                print('----------------------- reached the end of market orders -----------------------')\n",
+    "                break\n",
+    "\n",
+    "            if A_remain != 0:\n",
+    "                p_max = (1 + market_orders[j]['maximum_slippage']) * p_i\n",
+    "            elif i + 1 < len(limit_orders):\n",
+    "                p_max = (1 + market_orders[j]['maximum_slippage']) * limit_orders[i + 1]['price']\n",
+    "            else:\n",
+    "                print('----------------------- reached the end of limit orders ------------------------')\n",
+    "                break\n",
+    "\n",
+    "            B_remain = market_orders[j]['usd_amount']\n",
+    "\n",
+    "        if A_remain == 0:\n",
+    "            i += 1\n",
+    "            if i == len(limit_orders):\n",
+    "                print('----------------------- reached the end of limit orders ------------------------')\n",
+    "                break\n",
+    "\n",
+    "            p_i = limit_orders[i]['price']\n",
+    "            A_remain = limit_orders[i]['btc_amount']\n",
+    "\n",
+    "    for i in range(len(limit_orders)):\n",
+    "        outcome['limit'][i]['remaining'] = limit_orders[i]['btc_amount'] - outcome['limit'][i]['btc_sold']\n",
+    "        if outcome['limit'][i]['btc_sold'] != 0:\n",
+    "            outcome['limit'][i]['clearing_price'] = outcome['limit'][i]['usd_bought'] / outcome['limit'][i]['btc_sold']\n",
+    "\n",
+    "    for j in range(len(market_orders)):\n",
+    "        outcome['market'][j]['remaining'] = market_orders[j]['usd_amount'] - outcome['market'][j]['usd_sold']\n",
+    "        if outcome['market'][j]['btc_bought'] != 0:\n",
+    "            outcome['market'][j]['clearing_price'] = outcome['market'][j]['usd_sold'] / outcome['market'][j]['btc_bought']\n",
+    "\n",
+    "    return outcome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a72f2558-2bc1-4522-b099-c3d395b8ae97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i=0, j=0, p_max=200.99999999999997, p_i=200, A_buy=100, B_sell=20000, A_remain=0, B_remain=0\n",
+      "----------------------- reached the end of market orders -----------------------\n",
+      "{'limit': [{'btc_sold': 100,\n",
+      "            'usd_bought': 20000,\n",
+      "            'remaining': 0,\n",
+      "            'clearing_price': 200.0}],\n",
+      " 'market': [{'usd_sold': 20000,\n",
+      "             'btc_bought': 100,\n",
+      "             'remaining': 0,\n",
+      "             'clearing_price': 200.0}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1 limit order, 1 market order, exactly equal amounts.\n",
+    "pprint.pp(execute_market_orders(\n",
+    "    limit_orders=[\n",
+    "        {\n",
+    "            'btc_amount': 100,\n",
+    "            'price': 200,\n",
+    "        },\n",
+    "    ],\n",
+    "    market_orders=[\n",
+    "        {\n",
+    "            'usd_amount': 20_000,\n",
+    "            'maximum_slippage': 0.005,\n",
+    "        },\n",
+    "    ],\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a63f6319-b702-4b4c-bc06-5b58971fbcd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i=0, j=0, p_max=200.99999999999997, p_i=200, A_buy=50, B_sell=10000, A_remain=0, B_remain=10000\n",
+      "i=1, j=0, p_max=200.99999999999997, p_i=205, A_buy=12.499999999999456, B_sell=2562.4999999998886, A_remain=37.50000000000054, B_remain=7437.500000000111\n",
+      "----------------------- reached the end of market orders -----------------------\n",
+      "{'limit': [{'btc_sold': 50,\n",
+      "            'usd_bought': 10000,\n",
+      "            'remaining': 0,\n",
+      "            'clearing_price': 200.0},\n",
+      "           {'btc_sold': 12.499999999999456,\n",
+      "            'usd_bought': 2562.4999999998886,\n",
+      "            'remaining': 37.50000000000054,\n",
+      "            'clearing_price': 205.0}],\n",
+      " 'market': [{'usd_sold': 12562.499999999889,\n",
+      "             'btc_bought': 62.49999999999946,\n",
+      "             'remaining': 7437.500000000111,\n",
+      "             'clearing_price': 200.99999999999997}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2 limit orders, 1 market order.\n",
+    "# The market order fully consumes the 1st limit order, but partially consumes the 2nd limit order.\n",
+    "pprint.pp(execute_market_orders(\n",
+    "    limit_orders=[\n",
+    "        {\n",
+    "            'btc_amount': 50,\n",
+    "            'price': 200,\n",
+    "        },\n",
+    "        {\n",
+    "            'btc_amount': 50,\n",
+    "            'price': 205,\n",
+    "        }\n",
+    "    ],\n",
+    "    market_orders=[\n",
+    "        {\n",
+    "            'usd_amount': 20_000,\n",
+    "            'maximum_slippage': 0.005,\n",
+    "        },\n",
+    "    ],\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "710d397f-85e7-4292-83e8-f556b1537730",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i=0, j=0, p_max=200.99999999999997, p_i=200, A_buy=50, B_sell=10000, A_remain=0, B_remain=10000\n",
+      "i=1, j=0, p_max=200.99999999999997, p_i=205, A_buy=12.499999999999456, B_sell=2562.4999999998886, A_remain=37.50000000000054, B_remain=7437.500000000111\n",
+      "i=1, j=1, p_max=206.02499999999998, p_i=205, A_buy=37.50000000000054, B_sell=7687.500000000111, A_remain=0.0, B_remain=12312.499999999889\n",
+      "----------------------- reached the end of limit orders ------------------------\n",
+      "{'limit': [{'btc_sold': 50,\n",
+      "            'usd_bought': 10000,\n",
+      "            'remaining': 0,\n",
+      "            'clearing_price': 200.0},\n",
+      "           {'btc_sold': 50.0,\n",
+      "            'usd_bought': 10250.0,\n",
+      "            'remaining': 0.0,\n",
+      "            'clearing_price': 205.0}],\n",
+      " 'market': [{'usd_sold': 12562.499999999889,\n",
+      "             'btc_bought': 62.49999999999946,\n",
+      "             'remaining': 7437.500000000111,\n",
+      "             'clearing_price': 200.99999999999997},\n",
+      "            {'usd_sold': 7687.500000000111,\n",
+      "             'btc_bought': 37.50000000000054,\n",
+      "             'remaining': 12312.499999999889,\n",
+      "             'clearing_price': 205.0}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2 limit orders, 1 market order.\n",
+    "# Market order 1 fully consumes limit order 1, but partially consumes the limit order 2.\n",
+    "# Market order 2 fully consumes limit order 2, with some USD remaining.\n",
+    "pprint.pp(execute_market_orders(\n",
+    "    limit_orders=[\n",
+    "        {\n",
+    "            'btc_amount': 50,\n",
+    "            'price': 200,\n",
+    "        },\n",
+    "        {\n",
+    "            'btc_amount': 50,\n",
+    "            'price': 205,\n",
+    "        }\n",
+    "    ],\n",
+    "    market_orders=[\n",
+    "        {\n",
+    "            'usd_amount': 20_000,\n",
+    "            'maximum_slippage': 0.005,\n",
+    "        },\n",
+    "        {\n",
+    "            'usd_amount': 20_000,\n",
+    "            'maximum_slippage': 0.005,\n",
+    "        }\n",
+    "    ],\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0a8c45d9-d5a0-4154-8d3a-fdc66e97f8f4",
+   "id": "2a56756a-4841-4fee-b07c-f46fe02be06d",
    "metadata": {},
    "outputs": [],
    "source": []
