--- a/notebooks/auction.ipynb
+++ b/notebooks/auction.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Auction\n",
     "\n",
+    "Objective: match limit and market orders together in a single batch auction.\n",
+    "\n",
     "## Order types\n",
     "\n",
     "There are three order types: limit, market, and passive. Each order can be a bid (buy) or ask (sell). The direction is part of the storage key, so not included in the `Order` struct.\n",
@@ -23,21 +25,21 @@
     "struct LimitOrder {\n",
     "    pub user: Addr,\n",
     "    pub price: NonZero<Udec128_24>,\n",
-    "    pub amount: NonZero<Uint128>, // amount of the base asset\n",
+    "    pub amount: NonZero<Uint128>, // amount in the base asset\n",
     "    pub remaining: Udec128_6,\n",
     "    pub created_at_block_height: u64,\n",
     "}\n",
     "\n",
     "struct MarketOrder {\n",
     "    pub user: Addr,\n",
-    "    pub amount: NonZero<Uint128>, // amount of the base asset\n",
+    "    pub amount: NonZero<Uint128>, // amount in the base asset\n",
     "    pub remaining: Udec128_6,\n",
     "    pub max_slippage: Udec128_24,\n",
     "}\n",
     "\n",
     "struct PassiveOrder {\n",
     "    pub price: NonZero<Udec128_24>,\n",
-    "    pub amount: NonZero<Uint128>, // amount of the base asset\n",
+    "    pub amount: NonZero<Uint128>, // amount in the base asset\n",
     "    pub remaining: Udec128_6,\n",
     "}\n",
     "```\n",
@@ -46,31 +48,29 @@
     "\n",
     "- To create a **limit bid**, the user must send quote asset of amount `ceil(amount * price)`.\n",
     "- To create a **limit ask**, the user must send base asset of amount `amount`.\n",
-    "- To create a **market bid**, the user must send quote asset of at least amount `ceil(amount * cutoff_price)`, where `cutoff_price` = `(1 + max_slippage) * best_price`, where `best_price` is the lowest ask price available in the resting order book. Resting order book means the order book at the end of last block, before any order creation or cancelation of this block has been executed.\n",
+    "- To create a **market bid**, the user must send quote asset of amount `ceil(amount * cutoff_price)`, where `cutoff_price` = `(1 + max_slippage) * best_ask_price`, where `best_ask_price` is the lowest ask price available in the resting order book. Resting order book means the order book at the end of last block, after the last block's auction, before any order creation or cancelation of this block has been executed.\n",
     "- To create a **market ask**, the user must send base asset of amount `amount`.\n",
-    "\n",
-    "Here the tricky one is the market bid. By depositing `ceil(amount * cutoff_price)` amount of the quote asset, there is enough deposit to cover the entire order even if the order is executed at the worst possible price (i.e. the `cutoff_price`). However, consider that `cutoff_price` is computed based on best ask price in the rest order book; during this block, this limit ask order may be canceled, such that when we perform the batch auction, the best available ask price is worse (higher). In this case, the auction will revise the order's `amount` based on the updated best price. As such, the frontend is advised to send a little more than necessary, such as a 5% excess.\n",
     "\n",
     "## Order matching\n",
     "\n",
-    "At the end of the previous block, we have saved: 1) the best (highest) bid price, 2) the best (lowest) ask price, and 3) the mid price in the resting order book. The best bid/ask prices may be unavailable (`None`) if that side of the order book is empty.  `mid_price` is the arithmetic average of the best bid and best ask price; if one side of the order book is empty, then take the best price of the other (non-empty) side; if both sides are empty, mid price is `None`.\n",
+    "At the end of the previous block, after the auction, we have saved in contract storage: 1) the best (highest) bid price, 2) the best (lowest) ask price, and 3) the mid price in the resting order book. The best bid/ask prices may be unavailable (`None`) if that side of the order book is empty.  `mid_price` is the arithmetic mean of the best bid and ask prices; if one side of the order book is empty, then take the best price of the other (non-empty) side; if both sides are empty, mid price is `None`.\n",
     "\n",
-    "At the end of the current block, we first load the best and mid prices; then, we perform a batch auction involving 1) the resting order book, 2) limit and market orders received during the current block, and 3) orders from the passive liquidity pool, adjusted by the oracle prices updated in the current block.\n",
+    "At the end of the current block, we first load the best and mid prices from storage; then, we perform a batch auction involving 1) the resting order book, 2) limit and market orders received during the current block, and 3) orders from the passive liquidity pool, adjusted by the oracle prices updated in the current block.\n",
     "\n",
     "Each market order is treated as a limit order:\n",
     "\n",
-    "- For market asks, the \"limit price\" is `ceil((1 - max_slippage) * best_bid_price)`.\n",
-    "- For market bids, the \"limit price\" is `floor((1 + max_slippage) * best_ask_price)`.\n",
+    "- For market asks, the \"limit price\" is `(1 - max_slippage) * best_bid_price`.\n",
+    "- For market bids, the \"limit price\" is `(1 + max_slippage) * best_ask_price`.\n",
     "\n",
-    "If the best price is not available (meaning, that side of the order book is empty), the market order is canceled. (This should be extremely unlikely, as we have the passive liquidity pool as the backstop liquidity.)\n",
+    "If the best price is not available (meaning, that side of the order book is empty), the market order is canceled. (This should be extremely unlikely, as we always have the passive liquidity pool as the backstop liquidity.)\n",
     "\n",
-    "The auction should find a range of prices that maximizes the trading volume (as units of the base asset). We pick a clearing price within this range using the following algorithm:\n",
+    "The auction should find a range of prices that maximizes the trading volume (measured in the base asset). We choose a clearing price within this range as follows:\n",
     "\n",
     "- if `mid_price` is available, and:\n",
     "  - it's within the range, then use `mid_price`;\n",
     "  - it's bigger than the range's upper bound, use the upper bound;\n",
     "  - it's smaller than the range's lower bound, use the lower bound;\n",
-    "- otherwise (`mid_price` is `None`), use the mid point of the range (i.e. the arithmetic average between the upper and lower bounds)."
+    "- otherwise (`mid_price` is `None`), use the mid point of the range (i.e. the arithmetic mean between the upper and lower bounds)."
    ]
   },
   {
